--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "precommit": "lint-staged",
-        "lint:prettier": "prettier --check \"**/*\" --end-of-line auto",
-        "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
-        "lint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src && npm run lint:style",
-        "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.1",
@@ -36,7 +32,11 @@
         "eslint-plugin-react": "^7.28.0",
         "husky": "^7.0.4",
         "lint-staged": "^12.1.3",
-        "prettier": "^2.5.1"
+        "prettier": "^2.5.1",
+        "stylelint": "^13.13.1",
+        "stylelint-config-prettier": "^8.0.2",
+        "stylelint-config-standard": "^22.0.0",
+        "stylelint-order": "^4.1.0"
     },
     "browserslist": {
         "production": [
@@ -48,12 +48,6 @@
             "last 1 chrome version",
             "last 1 firefox version",
             "last 1 safari version"
-        ]
-    },
-    "lint-staged": {
-        "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
-        "**/*.{js,jsx,tsx,ts,less,md,json}": [
-            "prettier --write"
         ]
     }
 }
