--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "web-vitals": "^2.1.2"
     },
     "devDependencies": {
+        "@commitlint/cli": "^16.0.0",
+        "@commitlint/config-conventional": "^16.0.0",
         "@typescript-eslint/eslint-plugin": "^5.8.0",
         "@typescript-eslint/parser": "^5.8.0",
         "eslint": "^8.5.0",
@@ -32,11 +34,7 @@
         "eslint-plugin-react": "^7.28.0",
         "husky": "^7.0.4",
         "lint-staged": "^12.1.3",
-        "prettier": "^2.5.1",
-        "stylelint": "^13.13.1",
-        "stylelint-config-prettier": "^8.0.2",
-        "stylelint-config-standard": "^22.0.0",
-        "stylelint-order": "^4.1.0"
+        "prettier": "^2.5.1"
     },
     "browserslist": {
         "production": [
@@ -49,5 +47,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "lint-staged": {
+        "*.{js,ts,tsx}": "eslint --fix"
     }
 }
