--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2",
-    "react-router-dom": "^5.2.0"
+    "web-vitals": "^2.1.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.16.7",
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@craco/craco": "^6.4.3",
+    "@types/react-datepicker": "^4.3.4",
+    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "antd": "^4.18.2",
@@ -43,8 +46,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "@types/react-router-dom": "^5.1.8"
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "browserslist": {
     "production": [
