--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "analyzer": "env NODE_ENV=production BUILD_ANALYZER=true yarn start",
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx "
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -19,9 +19,11 @@
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "antd": "^4.18.6",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
-    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
@@ -32,11 +34,10 @@
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@craco/craco": "^6.4.3",
-    "@types/react-datepicker": "^4.3.4",
+    "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
-    "antd": "^4.18.2",
     "babel-plugin-import": "^1.13.3",
     "craco-less": "^2.0.0",
     "eslint": "^8.5.0",
