--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.6",
     "axios": "^0.25.0",
     "react": "^17.0.2",
@@ -27,7 +28,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.16.7",
